feat(federation): Proxy the Talk-Hash header so clients are aware of changes
